<resources>
    <string name="app_name">NewsApp</string>
    <string name="cancel">取消</string>
    <string name="confirm">确认</string>
    <string name="close">关闭</string>
    <string name="refresh">刷新</string>
    <string name="save">保存</string>
    <string name="result_confirm">确定</string>
    <string name="complete">完成</string>
    <string name="retry">重试</string>
    <string name="sync">同步</string>
    <string name="setting">设置</string>
    <string name="cache">缓存</string>
    <string name="manager">管理</string>
    <string name="submit">提交</string>
    <string name="detail">详情</string>
    <string name="qrcode">二维码</string>
    <string name="delete">删除</string>
    <string name="next">下一步</string>
    <string name="no_network_tips">您的网络不给力，请稍后重试</string>
    <string name="upload_success">上传成功</string>
    <string name="upload_failed">上传失败</string>
    <string name="save_success">保存成功</string>
    <string name="save_fail">保存失败</string>
    <string name="requests">请求</string>
    <string name="notifications">通知</string>
    <string name="aboutus">关于我们</string>
    <string name="delete_success">删除成功!</string>
    <string name="delete_failed">删除失败!</string>

    <string name="main_title">NewsApp主页</string>

    <!--商城-->
    <string name="store_title">商城</string>
    <string name="store_scan">扫一扫</string>
    <string name="store_message">消 息</string>
    <string name="store_find_goods">寻找商品</string>
    <string name="store_search_merchant">搜索商户</string>
    <string name="store_location">常州</string>
    <string name="store_daily_specials">每日特价</string>
    <string name="store_hot_single">热销单品</string>
    <string name="store_week_preferred">本周优选</string>

    <!--app bottombar-->
    <string name="bottomBar1">商城</string>
    <string name="bottomBar2">附近</string>
    <string name="bottomBar3">购物车</string>
    <string name="bottomBar4">我的</string>


    <string name="test_title">测试数据</string>
    <string name="leakcanary_title">LeakCanaryTest</string>
    <string name="add_goods_title">添加商品</string>
    <string name="action_logout">注销</string>


    <string name="title_activity_splash">闪屏页</string>
    <string name="title_activity_guidance">引导页</string>
    <string name="title_activity_login">登录</string>
    <string name="title_activity_register">注册</string>
    <string name="title_activity_forgetpassword">忘记密码</string>
    <string name="title_activity_goodslist">商品列表</string>
    <string name="title_activity_goodsdetail">商品详情</string>
    <string name="title_activity_test">测试</string>
    <string name="title_activity_addgoods">添加商品</string>
    <string name="title_activity_setting">设置</string>

    <string name="publish">发布</string>
    <string name="username">用户名</string>
    <string name="mobile">电话</string>
    <string name="email">E-mail</string>
    <string name="graph_verify">图形验证码</string>
    <string name="sms_verify">验证码</string>
    <string name="get_verify">获取验证码</string>
    <string name="get_verify_after">获取验证码($s后重发)</string>
    <string name="forget_password">忘记密码</string>
    <string name="password_old_hint">旧密码(数字和字母6-18位)</string>
    <string name="password_new_hint">新密码(数字和字母6-18位)</string>
    <string name="password_repeat_hint">重复新密码(数字和字母6-18位)</string>
    <string name="password_fomart">密码只能是数字和字母</string>
    <string name="password_new_empty">请输入新密码</string>
    <string name="password_repeat_not_same">两次输入的密码不一致</string>
    <string name="password_modify_success">密码修改成功</string>
    <string name="password_new_same_old">新密码与旧密码相同</string>

    <string name="email_not_null">邮箱不能为空</string>
    <string name="password_not_null">密码不能为空</string>
    <string name="verify_code_send">验证码已发送</string>
    <string name="email_format_error">邮箱格式错误</string>
    <string name="account_not_exist">账号不存在</string>
    <string name="missing_user_information">完善用户信息</string>
    <string name="nickname_not_null">昵称不能为空</string>
    <string name="nickname_format_error">昵称格式错误</string>

    <string name="create_child_toast_8">请输入2到24位中英文数字账号</string>
    <string name="create_child_toast_9">请输入6-18位英文数字密码</string>
    <string name="create_child_toast_10">请输入1-12位中英文数字昵称</string>
    <string name="create_child_toast_11">请输入1-4位英文数字昵称</string>

    <string name="goods_discription">商品描述</string>
    <string name="seletct_a_pic">从相册选择一张照片</string>
    <string name="prompt_password">密码</string>
    <string name="action_sign_in">注册并登录</string>
    <string name="action_sign_in_short">登录</string>


    <string name="perfect">完善用户信息</string>
    <string name="perfect_nickname">修改昵称</string>
    <string name="perfect_password">密码</string>


    <!--登录/注册-->
    <string name="login">登录</string>
    <string name="login_title">家长登录</string>
    <string name="login_password">登录密码</string>
    <string name="login_reg_user">注册新用户</string>
    <string name="login_forget_password">忘记密码</string>
    <string name="login_register_email">E-mail</string>
    <string name="login_register_mobile">手机号码</string>
    <string name="register">注册</string>
    <string name="register_title">家长注册</string>
    <string name="register_input_password_hint">新密码(6-18位字母或数字)</string>
    <string name="register_graph_verify">图形验证码</string>
    <string name="register_sms_verify">短信验证码</string>
    <string name="register_reset_verify">获取验证码($s后重发)</string>
    <string name="register_get_verify">获取验证码</string>
    <string name="register_protocol_clock">点击"注册"表示您已同意</string>
    <string name="register_protocol">《用户服务协议》</string>
    <string name="register_tip_input_mobile">请输入手机号码</string>
    <string name="register_tip_input_correct_mobile">请输入正确的手机号码</string>
    <string name="register_tip_input_password">请输入数字或字母组成的密码</string>
    <string name="register_tip_verification_code_sent">验证码已发送</string>
    <string name="forgetpassword_tip_input_password">请输入6-18位的密码</string>
    <string name="forgetpassword_tip_mobile_unregistered">该号码未注册，获取验证码失败</string>

    <string name="error_invalid_email">邮件格式错误</string>
    <string name="error_invalid_password">密码长度必须大于 6 位</string>
    <string name="error_field_required_password">密码不能为空</string>
    <string name="error_incorrect_password">密码错误</string>
    <string name="error_field_required">Email不能为空</string>

    <string name="me_default_name">SuperMan</string>
    <string name="me_default_region">上海</string>
    <string name="me_my_order">我的订单</string>
    <string name="me_pending_payment">待付款</string>
    <string name="me_wait_for_delivery">待发货</string>
    <string name="me_receiving_goods">待收货</string>
    <string name="me_pending_evaluation">待评价</string>
    <string name="me_sale_refund">退款/售后</string>
    <string name="me_message">消息中心</string>
    <string name="me_advice">意见反馈</string>
    <string name="me_personal_information">个人信息</string>
    <string name="me_personal_image">头像</string>
    <string name="me_nickname">用户昵称</string>
    <string name="me_sex">性别</string>
    <string name="me_sex_male">男</string>
    <string name="me_sex_female">女</string>
    <string name="me_region">地区</string>
    <string name="me_email">E-mail</string>
    <string name="me_password">密码</string>
    <string name="me_personal_profile">个人简介</string>
    <string name="me_Personal_profile_restriction">限制在40字以内</string>
    <string name="me_leave_name">这个用户很懒</string>
    <string name="me_personal_profile_not_modified">个人简介信息未进行修改</string>
    <string name="me_profile_not_empty">简介不能为空</string>

    <!--引导页-->
    <string name="guidance_title_1">Keep Track</string>
    <string name="guidance_label_1">Keep track of your kids\' activites and manage their screen time.</string>
    <string name="guidance_title_2">Data Analysis</string>
    <string name="guidance_label_2">Data analysis helps you understand your child\'s hidden potential.</string>
    <string name="guidance_title_3">Online Monitoring</string>
    <string name="guidance_label_3">Check your child\'s progress wherever you are.</string>


</resources>
