<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:auto="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="#EBEBEB"
              android:orientation="vertical">

    <!--标题栏-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/white"
        android:minHeight="?attr/actionBarSize">

        <TextView
            android:id="@+id/main_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="5dp"
            android:ellipsize="end"
            android:gravity="center"
            android:lines="1"
            android:maxWidth="240dp"
            android:text="@string/forget_password"
            android:textColor="@color/text_color"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/left_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dp"
            android:clickable="true"
            android:drawableLeft="@drawable/back_selector"
            android:drawablePadding="4dp"
            android:gravity="center_vertical"
            android:paddingLeft="8dp"
            android:paddingRight="15dp"
            android:textColor="@drawable/text_select"
            android:textSize="16sp"/>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical">

        <com.myself.library.view.CleanableEditText
            android:id="@+id/et_mobile"
            style="@style/NewsText.EditText"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="10dp"
            android:background="@color/text_color_white"
            android:hint="@string/email"/>
        <!--间隔线-->
        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:background="@color/divider_color"/>

        <!--图形验证码-->
        <RelativeLayout
            android:id="@+id/rl_graph_verify"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ll_phone"
            android:background="#fff"
            android:visibility="gone">

            <com.myself.library.view.CleanableEditText
                android:id="@+id/et_graph_verify"
                style="@style/NewsText.EditText"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_toLeftOf="@+id/image_graph_verify"
                android:background="#fff"
                android:drawableRight="@drawable/close_selector"
                android:hint="@string/graph_verify"
                android:lines="1"
                android:maxLength="4"
                android:singleLine="true"/>

            <!--图形验证码-->
            <ImageView
                android:id="@+id/image_graph_verify"
                android:layout_width="88dp"
                android:layout_height="32dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="8dp"/>

        </RelativeLayout>
        <!--间隔线-->
        <View
            android:id="@+id/v_diviver"
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:background="@color/divider_color"/>
        <!--短信验证码-->
        <RelativeLayout
            android:id="@+id/rl_sms_verify"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/v_diviver"
            android:background="@color/text_color_white"
            android:paddingRight="8dp">

            <com.myself.library.view.CleanableEditText
                android:id="@+id/et_sms_verify"
                style="@style/NewsText.EditText"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_toLeftOf="@+id/tb_get_verify"
                android:background="#fff"
                android:drawableRight="@drawable/close_selector"
                android:hint="@string/sms_verify"
                android:inputType="number"
                android:lines="1"
                android:maxLength="4"
                android:singleLine="true"/>

            <com.myself.library.view.TimeButton
                android:id="@+id/tb_get_verify"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:gravity="center"
                android:minHeight="48dp"
                android:textSize="@dimen/text_size_12sp"
                auto:click_background="@color/text_main_color_nor"
                auto:countdown_time="60"
                auto:text_after="@string/get_verify_after"
                auto:text_before="@string/get_verify"
                auto:unclick_background="@color/text_color_gray"/>

            <!--竖向间隔线-->
            <View
                android:layout_width="1px"
                android:layout_height="32dp"
                android:layout_margin="8dp"
                android:layout_toLeftOf="@id/tb_get_verify"
                android:background="@color/divider_color"/>

            <!--间隔线-->
            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_below="@id/et_sms_verify"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:background="@color/divider_color"/>
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/white"
            android:orientation="horizontal">

            <com.myself.library.view.CleanableEditText
                android:id="@+id/et_password"
                style="@style/NewsText.EditText"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_weight="0.8"
                android:background="@color/white"
                android:hint="@string/password_new_hint"
                android:inputType="textPassword"/>

            <com.myself.library.view.SwitchButton
                android:id="@+id/btn_lock"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                auto:norDrawable="@drawable/icon_20_11"
                auto:selDrawable="@drawable/icon_20_10"/>
        </LinearLayout>

        <!--间隔线-->
        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:background="@color/divider_color"/>

        <Button
            android:id="@+id/btn_nextstep"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/btn_los_focus"
            android:text="@string/complete"
            android:textAllCaps="false"
            android:textColor="#fff"
            android:textSize="@dimen/text_size_16sp"/>
    </LinearLayout>

</LinearLayout>
